# pillarDataset_

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/backgrounds/: README.md
assets/ground_materials/: README.md
assets/vehicles_raw/: README_put_vehicle_models_here.md
assets/vehicles_tagged/: README.md
config/: classes.yaml  dataset.yaml  paths.yaml  randomization.yaml  render.yaml
docs/: ANNOTATION_AND_ASSET_WORKFLOW.md
scripts/: run_ui.py
src/autowert_synthcars/: cli.py  config.py
src/autowert_synthcars/blender/: blender_entry.py  procedural_vehicle.py
src/autowert_synthcars/coco/: geometry.py  json_io.py  validate_coco.py  visualize_coco.py  writer.py
tools/: launch_ui_linux.sh  launch_ui_windows.bat  run_blender_demo_linux.sh  run_blender_demo_windows.bat
ui/backend/: app.py
ui/frontend/: app.js  index.html  styles.css
