[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autowert-synthcars"
version = "0.1.0"
description = "Synthetic Blender COCO dataset generator for AutoWert vehicle pillar instance segmentation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AutoWert" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "opencv-python>=4.9.0",
  "shapely>=2.0.0",
  "pycocotools>=2.0.7",
  "tqdm>=4.66.0"
]

[project.scripts]
autowert-synthcars = "autowert_synthcars.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autowert_synthcars*"]
namespaces = true
